Minor fix, center SocialMedia on small devices

--- a/app/_components/SocialMedia.module.css
+++ b/app/_components/SocialMedia.module.css
@@ -27,6 +27,7 @@
   .socialMediaContainer {
     position: relative;
     grid-template-columns: 1fr;
+    right: 0;
   }
 
   .socialMediaCard {
